Yo también ando dessuciando, ahora aparecen las profile photo en el chat